helm/grocy-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    name: grocy
  name: grocy
spec:
  ingressClassName: public
  rules:
  - host: grocy.kristoffer.codes
    http:
      paths:
      - backend:
          service:
            name: grocy
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grocy.kristoffer.codes
    secretName: grocy-tls
